--- a/FrontEndCode/Login.html
+++ b/FrontEndCode/Login.html
@@ -36,8 +36,8 @@
         </div>
 
         <div class = "LinksForPhone">
-            <a href="#"> Register </a> 
-            <a href="Login.html"> Login </a> 
+            <a href="Register.html"> Register </a> 
+            <a href="#"> Login </a> 
             <a href="#"> Q&A </a> 
             <a href="#"> Tutorial </a> 
             <a href="#"> Book now </a>
@@ -56,8 +56,8 @@
     <div class="header"> 
         <a href="Landing.html"><img src="NewLogoGoodColor.jpg" style="height: 8vw;"><a>
             <div class="Links">
-            <a href="#"> Register </a>
-            <a href="Login.html"> Login </a>
+            <a href="Register.html"> Register </a>
+            <a href="#"> Login </a>
             <a href="#"> Q&A </a>
             <a href="#"> Tutorial </a>
             <a href="#"> Book now </a>
