Changed email form type to email

--- a/FrontEndCode/Register.html
+++ b/FrontEndCode/Register.html
@@ -87,7 +87,7 @@
 
                     <input type="text" name="username" placeholder="(Optional) Username - defaults to first name">
     
-                    <input type="text" name="email" pattern=".+@mcgill\.ca|.+@mail\.mcgill\.ca" placeholder="Student email jhon.durant@mail.mcgill.ca" >
+                    <input type="email" name="email" pattern=".+@mcgill\.ca|.+@mail\.mcgill\.ca" placeholder="Student email jhon.durant@mail.mcgill.ca" >
 
                     <input type="text" name="password" placeholder="Password" >
     
