--- a/FrontEndCode/Landing.html
+++ b/FrontEndCode/Landing.html
@@ -8,7 +8,7 @@
         .calendar {
             display: flex;
             flex-wrap: wrap;
-            width: 69vh;
+            width: 500px;
             bottom: 8vh;
             right: 0;
             margin: 50px auto;
