--- a/FrontEndCode/Landing.html
+++ b/FrontEndCode/Landing.html
@@ -112,7 +112,7 @@
             <div class="Links">
                 <a href="Register.html"> Register </a>
                 <a href="Login.html"> Login </a>
-                <a href="#"> Q&A </a>
+                <a href="FAQ.html"> FAQ </a>
                 <a href="#"> Tutorial </a>
                 <a href="#"> Book now </a>
             </div>
