--- a/FrontEndCode/Login.html
+++ b/FrontEndCode/Login.html
@@ -37,8 +37,8 @@
 
         <div class = "LinksForPhone">
             <a href="Register.html"> Register </a> 
-            <a href="#"> Login </a> 
-            <a href="#"> Q&A </a> 
+            <a href="Login.html"> Login </a> 
+            <a href="FAQ.html"> FAQ </a> 
             <a href="#"> Tutorial </a> 
             <a href="#"> Book now </a>
         </div>
