--- a/FrontEndCode/Register.html
+++ b/FrontEndCode/Register.html
@@ -52,9 +52,9 @@
             </div>
 
             <div class = "LinksForPhone">
-                <a href="#"> Register </a> 
+                <a href="Register.html"> Register </a> 
                 <a href="Login.html"> Login </a> 
-                <a href="#"> Q&A </a> 
+                <a href="FAQ.html"> FAQ </a> 
                 <a href="#"> Tutorial </a> 
                 <a href="#"> Book now </a>
             </div>
