--- a/FrontEndCode/Landing.html
+++ b/FrontEndCode/Landing.html
@@ -52,12 +52,18 @@
         }
 
 
-        a {
+        /* a {
             margin-right: 5vw;
             color: #808998;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             font-size: 18px;
-        }
+        } */
+        a {
+        margin-right: 60px;
+        color: #808998;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 18px;
+    }
 
         .BookingMessageHeader{
             margin-top: 12%;
