added links to FAQ

--- a/FrontEndCode/Landing.html
+++ b/FrontEndCode/Landing.html
@@ -129,7 +129,7 @@
         <div class = "LinksForPhone">
             <a href="Register.html"> Register </a> 
             <a href="Login.html"> Login </a> 
-            <a href="#"> Q&A </a> 
+            <a href="FAQ.html"> Q&A </a> 
             <a href="#"> Tutorial </a> 
             <a href="#"> Book now </a>
         </div>
@@ -141,7 +141,7 @@
             <div class="Links">
                 <a href="Register.html"> Register </a>
                 <a href="Login.html"> Login </a>
-                <a href="#"> Q&A </a>
+                <a href="FAQ.html"> Q&A </a>
                 <a href="#"> Tutorial </a>
                 <a href="#"> Book now </a>
             </div>
