--- a/FrontEndCode/Login.html
+++ b/FrontEndCode/Login.html
@@ -58,7 +58,7 @@
             <div class="Links">
             <a href="Register.html"> Register </a>
             <a href="#"> Login </a>
-            <a href="#"> Q&A </a>
+            <a href="FAQ.html"> Q&A </a>
             <a href="#"> Tutorial </a>
             <a href="#"> Book now </a>
         </div>
