--- a/FrontEndCode/Register.html
+++ b/FrontEndCode/Register.html
@@ -74,7 +74,7 @@
                 <div class="Links">
                 <a href="#"> Register </a>
                 <a href="Login.html"> Login </a>
-                <a href="#"> Q&A </a>
+                <a href="FAQ.html"> Q&A </a>
                 <a href="#"> Tutorial </a>
                 <a href="#"> Book now </a>
             </div>
