added hrefs for BookNow.html

--- a/FrontEndCode/FAQ.html
+++ b/FrontEndCode/FAQ.html
@@ -93,7 +93,7 @@
             <a href="Login.html">Login</a>
             <a href="FAQ.html">FAQ</a>
             <a href="#">Tutorial</a>
-            <a href="#">Book now</a>
+            <a href="BookNow.html">Book now</a>
         </div>
     </div>
 
@@ -102,9 +102,9 @@
         <div class="Links">
             <a href="Register.html">Register</a>
             <a href="Login.html">Login</a>
-            <a href="#">Q&A</a>
+            <a href="FAQ.html">FAQ</a>
             <a href="#">Tutorial</a>
-            <a href="#">Book now</a>
+            <a href="BookNow.html">Book now</a>
         </div>
     </div>
 
