--- a/FrontEndCode/Login.html
+++ b/FrontEndCode/Login.html
@@ -40,7 +40,7 @@
             <a href="Login.html"> Login </a> 
             <a href="FAQ.html"> FAQ </a> 
             <a href="#"> Tutorial </a> 
-            <a href="#"> Book now </a>
+            <a href="BookNow.html"> Book now </a>
         </div>
     </div>
 
@@ -57,10 +57,10 @@
         <a href="Landing.html"><img src="NewLogoGoodColor.jpg" style="height: 8vw;"><a>
             <div class="Links">
             <a href="Register.html"> Register </a>
-            <a href="#"> Login </a>
-            <a href="#"> Q&A </a>
+            <a href="Login.html"> Login </a>
+            <a href="FAQ.html"> FAQ </a>
             <a href="#"> Tutorial </a>
-            <a href="#"> Book now </a>
+            <a href="BookNow.html"> Book now </a>
         </div>
     </div>
 </div>
