--- a/FrontEndCode/BookNow.html
+++ b/FrontEndCode/BookNow.html
@@ -53,9 +53,9 @@
         <div class="header"> 
             <a href="Landing.html"><img src="NewLogoGoodColor.jpg" style="height: 8vw;"><a>
                 <div class="Links">
-                <a href="#"> Register </a>
+                <a href="Register.html"> Register </a>
                 <a href="Login.html"> Login </a>
-                <a href="#"> Q&A </a>
+                <a href="FAQ.html"> FAQ </a>
                 <a href="#"> Tutorial </a>
                 <a href="BookNow.html"> Book now </a>
             </div>
