--- a/FrontEndCode/Dashboard.html
+++ b/FrontEndCode/Dashboard.html
@@ -8,7 +8,7 @@
     <link href="RegisterCssPho.css" rel="stylesheet">
     <link href="RegisterCssLap.css" rel="stylesheet">
     <link href="RegisterCssDesk.css" rel="stylesheet">
-
+    
     <style>
         /* Modal styles */
         .modal {
@@ -288,7 +288,7 @@
                 return false;
             }
 
-            fetch('./apiendpoints.php/booking', {
+            fetch('../quickmeet_api/apiendpoints.php/booking', {
                 method: 'POST',
                 headers: { 'Content-Type': 'application/json' },
                 body: JSON.stringify({
