solved login.php issue

--- a/FrontEndCode/Login.html
+++ b/FrontEndCode/Login.html
@@ -67,12 +67,12 @@
 
 <div class = "fromDivImgDiv">
     <div class = "divForForm">
-        <form name = "Form" action="xxx.php" method="POST" onsubmit="return checkForm();">
+        <form name = "Form" action="../backend/login.php" method="POST" onsubmit="return checkForm();">
             <h1 class="title">Login</h1>
 
             <input type="text" name="email" placeholder="email" >
 
-            <input type="text" name="password" placeholder="Password" >
+            <input type="password" name="password" placeholder="Password" >
 
             <input style="background-color: #0088DC;" class="registerButton" type="submit" value="Login">
         </form>
