good progress for the booking page and some changes to the sql_loaddata (3)

--- a/FrontEndCode/bookingTesting.html
+++ b/FrontEndCode/bookingTesting.html
@@ -1,4 +1,7 @@
-<!-- <!DOCTYPE html>
+
+<!-- git verification #1 -->
+ 
+<!-- <!DOCTYPE html> 
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -231,6 +234,7 @@
             }
         }
 
+        
         fetchBookings();
     </script>
 </body>
