edited the form size

--- a/FrontEndCode/BookNow.html
+++ b/FrontEndCode/BookNow.html
@@ -64,7 +64,7 @@
 
     <div class = "fromDivImgDiv">
         <div class = "divForForm">
-            <form name = "Form" onsubmit="return checkSearchForm();">
+            <form name = "Form" style="height: 250px;" onsubmit="return checkSearchForm();">
                     <h1 class="title">Search for your booking!</h1>
                     <div class="subtitle">Paste the booking url you want to search for:</div>
                     <input type="text" name="burl" placeholder="Booking URL" required>
