FAQ UI improved

--- a/FrontEndCode/FAQ.html
+++ b/FrontEndCode/FAQ.html
@@ -16,7 +16,7 @@
         .faq-container {
             margin: 40px auto;
             padding: 20px;
-            background-color: #ffffff;
+            background-color: #15182b;
             border-radius: 8px;
             max-width: 800px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -32,9 +32,9 @@
         }
 
         .faq-question {
-            font-size: 20px;
-            font-weight: bold;
-            color: #0C3D65;
+            font-size: 18px;
+	    font-family: "Segoe UI";
+            color: #ffffff;
             cursor: pointer;
             margin: 0;
             display: flex;
@@ -50,7 +50,7 @@
             margin-top: 10px;
             font-size: 16px;
             line-height: 1.6;
-            color: #555;
+            color: #ffffff;
             display: none;
             padding-left: 20px;
         }
@@ -72,8 +72,10 @@
             text-align: center;
             font-size: 28px;
             font-weight: bold;
-            color: #0C3D65;
+            color: #ffffff;
             margin-bottom: 30px;
+	    margin-top: 30px;
+	    font-family: "Segoe UI";
         }
 
     </style>
