--- a/FrontEndCode/Login.html
+++ b/FrontEndCode/Login.html
@@ -67,7 +67,7 @@
 
 <div class = "fromDivImgDiv">
     <div class = "divForForm">
-        <form name = "Form" action="../backend/login.php" method="POST" onsubmit="return checkForm();">
+        <form name = "Form" action="../backend/login_backend.php" method="POST" onsubmit="return checkForm();">
             <h1 class="title">Login</h1>
 
             <input type="text" name="email" placeholder="email" >
@@ -95,9 +95,6 @@
 
     }
 </script>
-
-
-
     
 </body>
 </html>
