feature bug fixes and booking logic

--- a/FrontEndCode/Dashboard.html
+++ b/FrontEndCode/Dashboard.html
@@ -167,8 +167,8 @@
             <a href="Register.html">Register</a>
             <a href="Login.html">Login</a>
             <a href="FAQ.html">FAQ</a>
-            <a href="#">Tutorial</a>
-            <a href="BookNow.html">Book now</a>
+            
+            <a href="BookNow.html">Search Booking</a>
         </div>
     </div>
 
