--- a/FrontEndCode/Landing.html
+++ b/FrontEndCode/Landing.html
@@ -114,7 +114,7 @@
                 <a href="Login.html"> Login </a>
                 <a href="FAQ.html"> FAQ </a>
                 <a href="#"> Tutorial </a>
-                <a href="#"> Book now </a>
+                <a href="#"> Search Booking </a>
             </div>
         </div>
     </div> -->
@@ -131,7 +131,7 @@
             <a href="Login.html"> Login </a> 
             <a href="FAQ.html"> FAQ </a> 
             <a href="#"> Tutorial </a> 
-            <a href="BookNow.html"> Book now </a>
+            <a href="BookNow.html"> Search Booking </a>
         </div>
     </div>
 
@@ -143,7 +143,7 @@
                 <a href="Login.html"> Login </a>
                 <a href="FAQ.html"> FAQ </a>
                 <a href="#"> Tutorial </a>
-                <a href="BookNow.html"> Book now </a>
+                <a href="BookNow.html"> Search Booking </a>
             </div>
     </div>
 
