--- a/FrontEndCode/BookNow.html
+++ b/FrontEndCode/BookNow.html
@@ -46,7 +46,7 @@
                 <a href="Login.html"> Login </a> 
                 <a href="FAQ.html"> FAQ </a> 
                 <a href="#"> Tutorial </a> 
-                <a href="BookNow.html"> Book now </a>
+                <a href="BookNow.html"> Search Booking </a>
             </div>
         </div>
 
@@ -57,7 +57,7 @@
                 <a href="Login.html"> Login </a>
                 <a href="FAQ.html"> FAQ </a>
                 <a href="#"> Tutorial </a>
-                <a href="BookNow.html"> Book now </a>
+                <a href="BookNow.html"> Search Booking </a>
             </div>
         </div>
     </div>
