--- a/FrontEndCode/Register.html
+++ b/FrontEndCode/Register.html
@@ -56,7 +56,7 @@
                 <a href="Login.html"> Login </a> 
                 <a href="FAQ.html"> FAQ </a> 
                 <a href="#"> Tutorial </a> 
-                <a href="BookNow.html"> Book now </a>
+                <a href="BookNow.html"> Search Booking </a>
             </div>
         </div>
 
@@ -65,7 +65,7 @@
             <a class = "LP" href="Login.html"> Login </a> 
             <a class = "LP" href="#"> Q&A </a> 
             <a class = "LP" href="#"> Tutorial </a> 
-            <a class = "LP" href="#"> Book now </a>
+            <a class = "LP" href="#"> Search Booking </a>
         </div> -->
 
 
@@ -76,7 +76,7 @@
                 <a href="Login.html"> Login </a>
                 <a href="FAQ.html"> FAQ </a>
                 <a href="#"> Tutorial </a>
-                <a href="BookNow.html"> Book now </a>
+                <a href="BookNow.html"> Search Booking </a>
             </div>
         </div>
     </div>
