authoring for Emilie and code clean up

--- a/FrontEndCode/Dashboard.html
+++ b/FrontEndCode/Dashboard.html
@@ -162,7 +162,7 @@
 
     <!-- Navbar Section -->
     <div class="header">
-        <a href="Landing.html"><img src="NewLogoGoodColor.jpg" style="height: 8vw;"></a>
+        <a href="Landing.html"><img src="./Images/NewLogoGoodColor.jpg" style="height: 8vw;"></a>
         <div class="Links">
             <a href="Register.html">Register</a>
             <a href="Login.html">Login</a>
