--- a/FrontEndCode/FAQ.html
+++ b/FrontEndCode/FAQ.html
@@ -86,7 +86,7 @@
     <!-- Navbar Section -->
     <div class="hamburger" onclick="dropDownMenu()">
         <div style="display: flex;">
-            <a href="Landing.html"><img src="NewLogoGoodColor.jpg" style="height: 80px;"></a>
+            <a href="Landing.html"><img src="./Images/NewLogoGoodColor.jpg" style="height: 80px;"></a>
             <a class="hamUnderline" href="#">☰</a>
         </div>
 
@@ -100,7 +100,7 @@
     </div>
 
     <div class="header">
-        <a href="Landing.html"><img src="NewLogoGoodColor.jpg" style="height: 8vw;"></a>
+        <a href="Landing.html"><img src="./Images/NewLogoGoodColor.jpg" style="height: 8vw;"></a>
         <div class="Links">
             <a href="Register.html">Register</a>
             <a href="Login.html">Login</a>
