--- a/FrontEndCode/Landing.html
+++ b/FrontEndCode/Landing.html
@@ -108,7 +108,7 @@
 
     
     <!-- <div class="header"> 
-            <img src="NewLogoGoodColor.jpg" style="height: 8vw;">
+            <img src="./Images/NewLogoGoodColor.jpg" style="height: 8vw;">
             <div class="Links">
                 <a href="Register.html"> Register </a>
                 <a href="Login.html"> Login </a>
@@ -121,7 +121,7 @@
 
     <div class="hamburger" onclick="dropDownMenu()">
         <div style ="display: flex;">
-            <a href="Landing.html"><img class = "logoForPhone" src="NewLogoGoodColor.jpg" style="height: 80px;"><a></a>
+            <a href="Landing.html"><img class = "logoForPhone" src="./Images/NewLogoGoodColor.jpg" style="height: 80px;"><a></a>
             <a class = "hamUnderline" href = "#">☰</a> 
         
         </div>
@@ -136,7 +136,7 @@
 
 
     <div class="header"> 
-        <a href="Landing.html"><img src="NewLogoGoodColor.jpg" style="height: 8vw;"><a>
+        <a href="Landing.html"><img src="./Images/NewLogoGoodColor.jpg" style="height: 8vw;"><a>
             <div class="Links">
                 <a href="Register.html"> Register </a>
                 <a href="Login.html"> Login </a>
@@ -150,7 +150,7 @@
         <h1 class = "BookingMessageHeader"> Booking made easy.</h1>
         <div class="messageUnder"> Just choose the time and day, and we'll take care of the rest</div>
 
-        <img class = "BOOKimg" src="BOOKCoolcolor.jpg"> 
+        <img class = "BOOKimg" src="./Images/BOOKCoolcolor.jpg"> 
     </div>
 
 
