--- a/FrontEndCode/Login.html
+++ b/FrontEndCode/Login.html
@@ -30,7 +30,7 @@
 
     <div class="hamburger" onclick="dropDownMenu()">
         <div style ="display: flex;">
-        <a href="Landing.html"><img src="NewLogoGoodColor.jpg" style="height: 80px;"><a></a>
+        <a href="Landing.html"><img src="./Images/NewLogoGoodColor.jpg" style="height: 80px;"><a></a>
         <a class = "hamUnderline" href = "#">☰</a> 
         
         </div>
@@ -53,7 +53,7 @@
 
 
     <div class="header"> 
-        <a href="Landing.html"><img src="NewLogoGoodColor.jpg" style="height: 8vw;"><a>
+        <a href="Landing.html"><img src="./Images/NewLogoGoodColor.jpg" style="height: 8vw;"><a>
             <div class="Links">
             <a href="Register.html"> Register </a>
             <a href="Login.html"> Login </a>
@@ -78,7 +78,7 @@
     </div>
 
     <div class = "divForSittingPers"> 
-        <img class = "personImg" src="SittingPersonGoodColorSmaller.jpg">
+        <img class = "personImg" src="./Images/SittingPersonGoodColorSmaller.jpg">
     </div>
 </div>
 
