--- a/FrontEndCode/BookNow.html
+++ b/FrontEndCode/BookNow.html
@@ -36,7 +36,7 @@
 
         <div class="hamburger" onclick="dropDownMenu()">
             <div style ="display: flex;">
-            <a href="Landing.html"><img src="NewLogoGoodColor.jpg" style="height: 80px;"><a></a>
+            <a href="Landing.html"><img src="./Images/NewLogoGoodColor.jpg" style="height: 80px;"><a></a>
             <a class = "hamUnderline" href = "#">☰</a> 
             
             </div>
@@ -50,7 +50,7 @@
         </div>
 
         <div class="header"> 
-            <a href="Landing.html"><img src="NewLogoGoodColor.jpg" style="height: 8vw;"><a>
+            <a href="Landing.html"><img src="./Images/NewLogoGoodColor.jpg" style="height: 8vw;"><a>
                 <div class="Links">
                 <a href="Register.html"> Register </a>
                 <a href="Login.html"> Login </a>
@@ -75,7 +75,7 @@
         </div>
 
         <div class = "divForSittingPers"> 
-            <img class = "personImg" src="SittingPersonGoodColorSmaller.jpg">
+            <img class = "personImg" src="./Images/SittingPersonGoodColorSmaller.jpg">
         </div>
     </div>
 
