forgot to add @author in some files

--- a/FrontEndCode/Register.html
+++ b/FrontEndCode/Register.html
@@ -1,3 +1,4 @@
+<!-- @author(Serhii Artemenko) -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -58,15 +59,6 @@
                 <a href="BookNow.html"> Search Booking </a>
             </div>
         </div>
-
-        <!-- <div class = "LinksForPhone">
-            <a class = "LP" href="#"> Register </a> 
-            <a class = "LP" href="Login.html"> Login </a> 
-            <a class = "LP" href="#"> Q&A </a> 
-            <a class = "LP" href="#"> Tutorial </a> 
-            <a class = "LP" href="#"> Search Booking </a>
-        </div> -->
-
 
         <div class="header"> 
             <a href="Landing.html"><img src="./Images/NewLogoGoodColor.jpg" style="height: 8vw;"><a>
