--- a/FrontEndCode/Landing.html
+++ b/FrontEndCode/Landing.html
@@ -1,3 +1,4 @@
+<!-- @author(Serhii Artemenko) -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -105,19 +106,6 @@
     <link href="Landing.css" rel="stylesheet">
 </head>
 <body style="background-color: #0C3D65;">
-
-    
-    <!-- <div class="header"> 
-            <img src="./Images/NewLogoGoodColor.jpg" style="height: 8vw;">
-            <div class="Links">
-                <a href="Register.html"> Register </a>
-                <a href="Login.html"> Login </a>
-                <a href="FAQ.html"> FAQ </a>
-                <a href="#"> Tutorial </a>
-                <a href="#"> Search Booking </a>
-            </div>
-        </div>
-    </div> -->
 
     <div class="hamburger" onclick="dropDownMenu()">
         <div style ="display: flex;">
